--- a/Food Finder/Views/Base.lproj/Main.storyboard
+++ b/Food Finder/Views/Base.lproj/Main.storyboard
@@ -265,51 +265,51 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SavedCell" rowHeight="90" id="Kyo-cK-cPB" customClass="HistoryTableViewCell" customModule="Food_Finder" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SavedCell" rowHeight="100" id="Kyo-cK-cPB" customClass="HistoryTableViewCell" customModule="Food_Finder" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kyo-cK-cPB" id="BQs-8m-T1V">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Address" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JcT-c6-seN">
-                                                    <rect key="frame" x="97" y="27.5" width="278" height="19.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="1753 Dundas Street West" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JcT-c6-seN">
+                                                    <rect key="frame" x="106" y="42" width="268" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XuE-dF-nIC">
-                                                    <rect key="frame" x="9" y="5" width="79.5" height="79.5"/>
+                                                    <rect key="frame" x="9" y="5" width="89.5" height="89.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="XuE-dF-nIC" secondAttribute="height" multiplier="1:1" id="1es-nV-ePq"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Bang Bang Ice Cream and Bakery" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Plp-2d-sf3">
-                                                    <rect key="frame" x="97" y="0.0" width="278" height="25.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Bang Bang Ice Cream and Bakery" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Plp-2d-sf3">
+                                                    <rect key="frame" x="106" y="13" width="268" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hlo-ND-Uqt">
-                                                    <rect key="frame" x="97" y="55" width="278" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="date" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hlo-ND-Uqt">
+                                                    <rect key="frame" x="106" y="69" width="268" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="Hlo-ND-Uqt" firstAttribute="top" secondItem="JcT-c6-seN" secondAttribute="bottom" constant="7.5" id="4o0-J8-DGB"/>
+                                                <constraint firstItem="Plp-2d-sf3" firstAttribute="leading" secondItem="XuE-dF-nIC" secondAttribute="trailing" constant="7.5" id="BOz-I9-tJU"/>
+                                                <constraint firstAttribute="trailing" secondItem="Plp-2d-sf3" secondAttribute="trailing" constant="1" id="Dx1-TN-qkc"/>
                                                 <constraint firstItem="XuE-dF-nIC" firstAttribute="top" secondItem="BQs-8m-T1V" secondAttribute="top" constant="5" id="Fss-eI-yjP"/>
-                                                <constraint firstItem="Plp-2d-sf3" firstAttribute="top" secondItem="BQs-8m-T1V" secondAttribute="top" id="HB9-Yy-f8P"/>
-                                                <constraint firstItem="JcT-c6-seN" firstAttribute="leading" secondItem="XuE-dF-nIC" secondAttribute="trailing" constant="8.5" id="J4U-Ld-9G2"/>
-                                                <constraint firstAttribute="bottom" secondItem="Hlo-ND-Uqt" secondAttribute="bottom" constant="17.5" id="LcT-Nb-gIK"/>
-                                                <constraint firstAttribute="trailing" secondItem="Hlo-ND-Uqt" secondAttribute="trailing" id="RmD-bs-ndQ"/>
-                                                <constraint firstItem="Plp-2d-sf3" firstAttribute="leading" secondItem="XuE-dF-nIC" secondAttribute="trailing" constant="8.5" id="RwQ-04-01v"/>
+                                                <constraint firstItem="JcT-c6-seN" firstAttribute="top" secondItem="Plp-2d-sf3" secondAttribute="bottom" constant="7.5" id="NrZ-pa-wS8"/>
+                                                <constraint firstAttribute="trailing" secondItem="Hlo-ND-Uqt" secondAttribute="trailing" constant="1" id="QzK-mr-Jbl"/>
+                                                <constraint firstAttribute="trailing" secondItem="JcT-c6-seN" secondAttribute="trailing" constant="1" id="RFh-d8-8zw"/>
                                                 <constraint firstItem="XuE-dF-nIC" firstAttribute="leading" secondItem="BQs-8m-T1V" secondAttribute="leading" constant="9" id="U93-Sp-6bo"/>
-                                                <constraint firstItem="JcT-c6-seN" firstAttribute="top" secondItem="Plp-2d-sf3" secondAttribute="bottom" constant="2" id="aig-bJ-HvC"/>
-                                                <constraint firstItem="Hlo-ND-Uqt" firstAttribute="top" secondItem="JcT-c6-seN" secondAttribute="bottom" constant="8" id="bVq-gl-CaS"/>
-                                                <constraint firstItem="Hlo-ND-Uqt" firstAttribute="leading" secondItem="XuE-dF-nIC" secondAttribute="trailing" constant="8.5" id="gkI-QQ-nSm"/>
-                                                <constraint firstAttribute="trailing" secondItem="JcT-c6-seN" secondAttribute="trailing" id="jMW-g0-4Bj"/>
-                                                <constraint firstAttribute="trailing" secondItem="Plp-2d-sf3" secondAttribute="trailing" id="tib-zl-L10"/>
+                                                <constraint firstItem="Plp-2d-sf3" firstAttribute="top" secondItem="BQs-8m-T1V" secondAttribute="top" constant="12.75" id="Vsc-Dw-5Vu"/>
+                                                <constraint firstItem="JcT-c6-seN" firstAttribute="leading" secondItem="XuE-dF-nIC" secondAttribute="trailing" constant="7.5" id="bi2-HK-pwk"/>
+                                                <constraint firstItem="Hlo-ND-Uqt" firstAttribute="leading" secondItem="XuE-dF-nIC" secondAttribute="trailing" constant="7.5" id="cK9-RS-1Xm"/>
+                                                <constraint firstAttribute="bottom" secondItem="Hlo-ND-Uqt" secondAttribute="bottom" constant="12.75" id="kN8-sF-9pu"/>
                                                 <constraint firstAttribute="bottom" secondItem="XuE-dF-nIC" secondAttribute="bottom" constant="5" id="xLn-0d-ort"/>
                                             </constraints>
                                         </tableViewCellContentView>
